--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "buildCommand": "npm install && npm run build",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "installCommand": "npm install",
-  "framework": "vite",
-  "nodeVersion": "20.x"
+  "framework": "vite"
 }
 
